# python-web-crud-app-with-ddd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py  config.yaml  container.py  main.py
app/api/: __init__.py
app/api/auth/: error_handler.py
app/api/comments/: error_handler.py
app/api/common/: __init__.py  dependencies.py  error_handler.py
app/api/posts/: entrypoints.py  schemas.py
app/api/users/: __init__.py  entrypoints.py  error_handler.py
app/auth/service_layer/: get_token.py  get_token_payload.py
app/common/domain/: exceptions.py
app/common/presentation/: error_handler.py
app/common/service_layer/: unit_of_work.py
app/infrastructures/: persistence.py
app/modules/: container.py
app/modules/auth/: __init__.py  config.py  container.py
app/modules/comments/: conatiner.py
app/modules/posts/: __init__.py  container.py
app/modules/users/: __init__.py  container.py
app/posts/: __init__.py
app/posts/adapters/: container.py  repository.py
app/posts/domain/: exceptions.py  model.py  repository.py
app/posts/presentation/: entrypoints.py  error_handler.py  schemas.py
app/posts/service_layer/: __init__.py  create.py  delete.py  read.py  update.py
app/users/: __init__.py
app/users/adapters/: container.py  repository.py
app/users/domain/: exceptions.py  repository.py
app/users/presentation/: entrypoints.py  error_handler.py
app/users/service_layer/: authorize.py  create.py  delete.py  read.py
tests/e2e/: conftest.py
tests/e2e/users/: __init__.py  (+2 more)
(+70 files in other folders)
